# star-centroiding

./: CMakeLists.txt  README.md  main.cpp
code/: extraction.cpp  extraction.h
data/star_catalog/: skymaps.csv
handout/: 星图匹配流程201805.txt  星图小队暑假任务201808.txt
legacy/python-extraction/: centroid.npy  centroid.txt  verify.py
reference/: 基于星敏感器的星点提取与星图识别方法研究_罗丽燕.caj
